--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,5 +51,19 @@
       </form>
     </div>
     <div id="nicknameResult" class="nickname__result"></div>
+    <div class="kakao__ad">
+      <ins
+        class="kakao_ad_area"
+        style="display: none"
+        data-ad-unit="DAN-IO0MnHPhmcWHWwSP"
+        data-ad-width="320"
+        data-ad-height="100"
+      ></ins>
+      <script
+        type="text/javascript"
+        src="//t1.daumcdn.net/kas/static/ba.min.js"
+        async
+      ></script>
+    </div>
   </body>
 </html>
