Feat: 구글 소유 확인

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,10 @@
       name="naver-site-verification"
       content="32df768f1a3477cf01ec1b30758e6344223c5258"
     />
+    <meta
+      name="google-site-verification"
+      content="me_JwLCnEsvZ8Wp48CbXRg069RoLWbURo7xBBgvNhCA"
+    />
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
