Feat: favicon 추가

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
       name="google-site-verification"
       content="me_JwLCnEsvZ8Wp48CbXRg069RoLWbURo7xBBgvNhCA"
     />
+    <link rel="icon" href="./public/favicon.ico" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
