--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,9 +6,13 @@
     <meta name="title" content="닉네임 생성기 - 닉네임 추천" />
     <meta
       name="description"
-      content="닉네임 생성 사이트입니다. 원하는 키워드나 스타일을 입력하고 닉네임을 추천받자!"
+      content="닉네임 생성 사이트. 원하는 키워드나 스타일을 입력하고 닉네임을 추천받자!"
     />
     <meta name="keywords" content="닉네임 생성기, 랜덤 닉네임, 닉네임 추천" />
+    <meta
+      property="og:description"
+      content="닉네임 생성 사이트. 원하는 키워드나 스타일을 입력하고 닉네임을 추천받자!"
+    />
     <meta
       name="naver-site-verification"
       content="32df768f1a3477cf01ec1b30758e6344223c5258"
