--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,9 @@
       content="닉네임 생성 사이트. 원하는 키워드나 스타일을 입력하고 닉네임을 추천받자!"
     />
     <meta name="keywords" content="닉네임 생성기, 랜덤 닉네임, 닉네임 추천" />
+    <meta property="og:title" content="닉네임 생성기 - 닉네임 추천" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nickname-maker.pages.dev" />
     <meta
       property="og:description"
       content="닉네임 생성 사이트. 원하는 키워드나 스타일을 입력하고 닉네임을 추천받자!"
