Feat: og:image 추가

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
     <meta name="keywords" content="닉네임 생성기, 랜덤 닉네임, 닉네임 추천" />
     <meta property="og:title" content="닉네임 생성기 - 닉네임 추천" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="./public/pencil.png" />
     <meta property="og:url" content="https://nickname-maker.pages.dev" />
     <meta
       property="og:description"
